<resources>
    <string name="app_name" translatable="false">GameQuiz</string>
    <string name="welcome_back">Welcome back!!</string>
    <string name="login">Log in</string>
    <string name="mail">Email</string>
    <string name="mail_example" translatable="false">info@example.com</string>
    <string name="password">Password</string>
    <string name="remember">Remember me</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="create_account">Create an account</string>
    <string name="signup">Sign up</string>
    <string name="welcome">Welcome!!</string>
    <string name="login_again">Already have an account?</string>
    <string name="app_logo">App logo</string>
    <string name="welcome_text">You need an account to play, log in or sign up now.</string>
    <string name="welcome_simple">Welcome</string>
    <string name="result">Result</string>
    <string name="aciertos">points</string>
    <string name="username">Username</string>
    <string name="not_have_account">You don\'t have an account?</string>
    <string name="username_example">johnny_24</string>
    <string name="confirm_password">Confirm password</string>
    <string name="error_passwd">ERROR. Password fields do not match</string>
    <string name="complete_fields">Please, complete all the fields.</string>
    <string name="error_signup">ERROR. Email or password is not valid.</string>
    <string name="alertdialog_question">Do you want to close the app?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="error_login">ERROR. Email or password is not correct.</string>
    <string name="bye">Bye! :)</string>
    <string name="play">Play</string>
    <string name="settings">Settings</string>
    <string name="logout">Log out</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="categories">Categories</string>
    <string name="all">All</string>
    <string name="sports">Sports</string>
    <string name="action">Action</string>
    <string name="horror">Horror</string>
    <string name="retro">Retro</string>
    <string name="popular">Most popular</string>
    <string name="trending">Trending</string>
    <string name="retro_indie">Retro/Indie</string>
    <string name="action_shooter">Action/Shooter</string>
    <string name="action_description">In this category you can find games from the action genre</string>
    <string name="rockstar" translatable="false">Rockstar</string>
    <string name="rockstar_description">In this category you can find games from the brand Rockstar</string>
    <string name="ubisoft" translatable="false">Ubisoft</string>
    <string name="ubisoft_description">In this category you can find games from the brand Ubisoft</string>
    <string name="zombies">Zombies</string>
    <string name="resident_evil" translatable="false">Resident Evil</string>
    <string name="resident_evil_description">In this category you can find games from Resident Evil\'s saga</string>
    <string name="god_of_war" translatable="false">God of War</string>
    <string name="god_of_war_description">In this category you can find games from God of War\'s saga</string>
    <string name="tekken" translatable="false">Tekken</string>
    <string name="tekken_description">In this category you can find games from Tekken\'s saga</string>
    <string name="nba" translatable="false">NBA</string>
    <string name="nba_description">In this category you can find games from NBA\'s saga</string>
    <string name="racing">Racing</string>
    <string name="racing_description">In this category you can find games from the racing genre</string>
    <string name="horror_description">In this category you can find games from the horror genre</string>
    <string name="zombies_description">In this category you can find games from the zombies genre</string>
    <string name="indies">Indies</string>
    <string name="indies_description">In this category you can find games from the indies genre</string>
    <string name="retro_description">In this category you can find games from the retro genre</string>
    <string name="silksong" translatable="false">Silksong</string>
    <string name="silksong_description">In this category you can find games from Hollow Knight\'s saga</string>
    <string name="shooter">Shooter</string>
    <string name="shooter_description">In this category you can find games from the shooter genre</string>
    <string name="epic_games" translatable="false">Epic Games</string>
    <string name="epic_games_description">In this category you can find games from the brand Epic Games</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>